# hsa_hopper_control

./: .gitignore  .gitmodules  pyproject.toml
arduino/: upload.sh
arduino/servo_driver/: servo_driver.ino
data/hsa_identification/: analysis.ipynb
examples/: ati_sensor.py  better_hop.py  jam_test.py  make_robot.py  onehop.py  pd_controller_test.py  print_motor_state.py  quiescent_power.py  send_motor_torque.py  send_position.py  simple_hop.py  write_servo.py
experiments/: brake_test.py  frequency_sweep.py  hop_experiment.py  hsa_angle_sweep.py  hsa_identification.py  standing_break.py
notebooks/: controller_sim.ipynb  hop_analysis.ipynb  hop_controller_combined.ipynb  hop_optimal_controller.ipynb  hop_startup_controller.ipynb  hsa_identification.ipynb  no_hsa_bvp.yaml  no_hsa_hop_start.yaml  no_hsa_stance_controller.yaml
resources/: hardware.yaml  jam_test.yaml  no_hsa_controller.yaml
resources/experiments/: .hsa_wood_1300g.yaml.swp  brake_test.yaml  hsa_angle_sweep.yaml  hsa_carpet.yaml  hsa_identification.yaml  hsa_wood_1300g.yaml  hsa_wood_1800g.yaml  hsa_wood_2300g.yaml  motor_identification.yaml  no_hsa_cardboard.yaml  no_hsa_concrete.yaml  no_hsa_foam.yaml  no_hsa_frequency_sweep.yaml  no_hsa_identification.yaml  no_hsa_kneepad copy.yaml  no_hsa_kneepad.yaml  no_hsa_wood.yaml  no_hsa_wood_1300g.yaml  no_hsa_wood_1800g.yaml  no_hsa_wood_2300g.yaml  standing_break.yaml  standing_test.yaml
src/hsa_hopper/: __init__.py  collocation.py  constants.py  controller.py  dynamics.py  (+9 more)
src/hsa_hopper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+30 files in other folders)
